--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
+  <script src="js/helpersModule.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/data.js"></script>
