--- a/index.html
+++ b/index.html
@@ -240,15 +240,7 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
-  <script src="js/helpersModule.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/backend.js"></script>
-  <script src="js/data.js"></script>
-  <script src="js/picture.js"></script>
-  <script src="js/preview.js"></script>
-  <script src="js/form.js"></script>
-  <script src="js/gallery.js"></script>
-  <script src="js/main.js"></script>
+  <script src="bundle.js"></script>
 
 </body>
 </html>
